--- a/client/src/Components/placard/style.css
+++ b/client/src/Components/placard/style.css
@@ -1,19 +1,22 @@
 .placard-container{
-    height: 100%;
+    height: 95%;
+    max-height: 800px;
     min-width: 30em;
     width: fit-content;
     background-color: white;
     margin-right: 20px;
-    border-radius: 20px;
-    padding: 50px;
+    border-radius: 10px;
+    padding: 30px 50px;
     box-sizing: border-box; /* include padding into width */
     overflow-y: hidden;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 
 .placard-grid{
     display: grid;
-    grid-template-rows: 10% 65%;
+    grid-template-rows: 70px 1fr;
+    max-height: 95%;
 }
 .placard-header{
     display: grid;
@@ -32,6 +35,8 @@
 }
 
 .placard-body{
+    margin-top: 20px;
+
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
